Added Edit Ingredient Activity
Added the activity and fixed an error in a string-array for a spinner
that was causing a bug in the calculations for half-gallons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,7 +45,7 @@
         <item>cups</item>
         <item>pints</item>
         <item>quarts</item>
-        <item>half-gallon</item>
+        <item>half-gallons</item>
         <item>gallons</item>
         <item>milliliters</item>
         <item>liters</item>
@@ -73,7 +73,7 @@
         <item>cups</item>
         <item>pints</item>
         <item>quarts</item>
-        <item>half-gallon</item>
+        <item>half-gallons</item>
         <item>gallons</item>
         <item>milliliters</item>
         <item>liters</item>
